# Kitsu

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  production.yml  test.yml
doc/: README.md  architecture.md  ci-cd.md  cli-reference.md  contributing.md  glossary.md  identity-and-crypto.md  installation.md  modules.md  networking.md  object-model.md  repository-internals.md  storage-engine.md
src/: config.rs  diff.rs  exclude.rs  identity.rs  index.rs  main.rs  objects.rs  remote.rs  state.rs  storage.rs
