[package]
name = "kitsu"
version = "0.0.1-alpha"
edition = "2024"
description = "A modern version control system writed in Rust"

[package.metadata.kitsu]
dir_name = ".kitsu"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
flate2 = "1.1.9"
git2 = "0.20.4"
hex = "0.4.3"
ignore = "0.4.25"
rand = "0.8"
rand_core = "0.6"
rpassword = "7.5.2"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
similar = "3.1.0"
ssh2 = "0.9.5"
tar = "0.4.45"
toml = "1.1.2"
walkdir = "2.5.0"

[build-dependencies]
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.10.1"
